@@ -32,11 +32,11 @@ vector<Ratio const *> Ratio::_ratios;
 void
 Ratio::setup_ratios ()
 {
-	_ratios.push_back (new Ratio (float(1285) / 1080, "119", _("1.19"), "F"));
-	_ratios.push_back (new Ratio (float(1436) / 1080, "133", _("4:3"), "F"));
+	_ratios.push_back (new Ratio (float(1290) / 1080, "119", _("1.19"), "F"));
+	_ratios.push_back (new Ratio (float(1440) / 1080, "133", _("4:3"), "F"));
 	_ratios.push_back (new Ratio (float(1480) / 1080, "137", _("Academy"), "F"));
 	_ratios.push_back (new Ratio (float(1485) / 1080, "138", _("1.375"), "F"));
-	_ratios.push_back (new Ratio (float(1793) / 1080, "166", _("1.66"), "F"));
+	_ratios.push_back (new Ratio (float(1800) / 1080, "166", _("1.66"), "F"));
 	_ratios.push_back (new Ratio (float(1920) / 1080, "178", _("16:9"), "F"));
 	_ratios.push_back (new Ratio (float(1998) / 1080, "185", _("Flat"), "F"));
 	_ratios.push_back (new Ratio (float(2048) /  858, "239", _("Scope"), "S"));
